cluster/apps/whoami/whoami/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: whoami
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: whoami
  ports:
    - port: 80
      targetPort: 80
